--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<app-nav-menu></app-nav-menu>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
