botao contador cards

--- a/src/app/pages/deck/deck-details/deck-details.component.html
+++ b/src/app/pages/deck/deck-details/deck-details.component.html
@@ -26,6 +26,7 @@
               <div class="row">
                 <img src={{card.images.small}} />
               </div>
+              <app-btn-number-count (updateAmount)="updateCurrentDeck($event, card)"></app-btn-number-count>
             </div>
           </div>
         </div>
