--- a/src/app/pages/deck/components/cards-list/cards-list.component.html
+++ b/src/app/pages/deck/components/cards-list/cards-list.component.html
@@ -1,23 +1,15 @@
-<div class="col-12 p-3" style="    background-color: #3f51b5;
-  border-radius: 10px;
-  color: #fff;">
+<div class="col-12 p-3" class="selected-cards">
   <div class="row">
     <div class="col-12">
-      <h3 style="    text-align: center;
-        font-size: 18px;
-        text-transform: uppercase;">
+      <h3>
         Cartas selecionadas
       </h3>
     </div>
-    <div class="col-12" style="    text-align: center;
-      overflow-y: auto;
-      max-height: 300px;
-      padding: 0.5em 1.2em;">
-      <div class="col-12 " *ngFor="let item of selectedCards" style="
-          font-weight: 300;">
-        {{item.name}} <span> x {{item.quantities}}</span>
+    <div class="col-12" class="selected-cards__item">
+      <div class="col-12 selected-cards__item__text " *ngFor="let item of cardList" style="
+         ">
+        {{item.name}} <span> x {{item.amount}}</span>
       </div>
     </div>
   </div>
-
 </div>
